Bruk ny versjon av poao-tilgang klient der man kan angi fnr ved opprettelse av bruker + litt rydding - WIP MoteSmsTest feiler